[package]
name = "renju_move_matching"
version = "0.1.0"
edition = "2021"

[dependencies]
whr = "0.2.1"
quick-xml = "0.36"
chrono = "0.4"
plotters = { version = "0.3.7", features =  ["svg_backend"] }
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
ratatui = "0.28"
crossterm = "0.28"
csv = "1.3" 
